<resources>
    <string name="category_htc_sense_web">HTCSense.com</string>
    <string name="no_track_title">-- --</string>
    <string name="htc_vmm_title">Backup Assistant Plus</string>
    <string name="onesong">1 song</string>
    <string name="durationformat">%2$d:%5$02d</string>
    <string name="durationformat_h">%1$d:%3$02d:%5$02d</string>
    <string name="goto_start">Library</string>
    <string name="goto_playback">Playback</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="upload">Upload</string>
    <string name="edit_queue">Edit queue</string>
    <string name="delete_artist_desc">All songs by %s will be permanently deleted from the SD card</string>
    <string name="delete_artist_desc_phone_storage">All songs by %s will be permanently deleted from the phone storage</string>
    <string name="delete_album_desc">The entire album,\"%s\", will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc_phone_storage">The entire album,\"%s\", will be permanently deleted from the phone storage.</string>
    <string name="delete_song_desc">\"%s\" will be permanently deleted from the SD card</string>
    <string name="delete_song_desc_phone_storage">\"%s\" will be permanently deleted from the phone storage</string>
    <string name="htc_delete_composer_desc">All songs by %s will be permanently deleted from the SD card</string>
    <string name="htc_delete_genre_desc">All songs in the %s genre will be permanently deleted from the SD card</string>
    <string name="htc_delete_genre_desc_phone_storage">All songs in the %s genre will be permanently deleted from the phone storage</string>
    <string name="htc_delete_artist_songs_desc">The songs by %s will be permanently deleted from the SD card</string>
    <string name="htc_delete_artist_songs_desc_phone_storage">The songs by %s will be permanently deleted from the phone storage</string>
    <string name="htc_delete_album_songs_desc">The songs on the album \"%s\" will be permanently deleted from the SD card</string>
    <string name="htc_delete_album_songs_desc_phone_storage">The songs on the album \"%s\" will be permanently deleted from the phone storage</string>
    <string name="htc_delete_composer_songs_desc">The songs by %s will be permanently deleted from the SD card</string>
    <string name="scanning">Scanning SD card…</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="partyshuffle_title">Party shuffle</string>
    <string name="artists_title">Artists</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_title">Songs</string>
    <string name="htc_all_tracks_title">All songs</string>
    <string name="playlists_title">Playlists</string>
    <string name="no_tracks_title">No songs</string>
    <string name="htc_composer_title">Composers</string>
    <string name="htc_genre_title">Genres</string>
    <string name="htc_purchase_title">Purchased</string>
    <string name="htc_dlna_title">Media servers</string>
    <string name="htc_dlna_title_TMO">Screen Share</string>
    <string name="htc_change_order_title">Change order</string>
    <string name="htc_track_not_found">No music found</string>
    <string name="htc_album_not_found">No albums found</string>
    <string name="htc_artist_not_found">No artists found</string>
    <string name="htc_playlist_not_found">No playlists found</string>
    <string name="htc_genre_not_found">No genres found</string>
    <string name="htc_composer_not_found">No composers found</string>
    <string name="htc_server_not_found">No servers found on current network</string>
    <string name="htc_queue_not_found">Choose songs from your library to play some music.</string>
    <string name="htc_equalizer_title">Equalizer</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted</string>
    <string name="playlist_renamed_message">Playlist renamed</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="htc_new_songs_playlist">Add playlist</string>
    <string name="htc_searching">Searching for music...</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="phone_storage_busy_title">Phone storage unavailable</string>
    <string name="sdcard_unmounted">SD card unmounted</string>
    <string name="phone_storage_error">An error was encountered in your phone storage.</string>
    <string name="sdcard_error">An error was encountered on your SD card.</string>
    <string name="both_storage_error">Your content is unavailable because a storage error occurred.</string>
    <string name="sdcard_busy_message">SD card is unavailable because it is being used as USB storage. Disconnect USB to access SD card.</string>
    <string name="phone_storage_busy_message">Your content is unavailable because your phone is being used as USB storage. Disconnect USB to access your content.</string>
    <string name="internal_memory_low">Your phone is low on storage space. Please delete some files to make some space before using this application.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="phone_storage_error_title">Phone storage error</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="htc_unknown_composer_name">Unknown composer</string>
    <string name="htc_unknown_genre_name">Unknown genre</string>
    <string name="shuffle_on_notif">Shuffle is on</string>
    <string name="shuffle_off_notif">Shuffle is off</string>
    <string name="repeat_off_notif">Repeat is off</string>
    <string name="repeat_current_notif">Repeating current song</string>
    <string name="repeat_all_notif">Repeating all songs</string>
    <string name="ringtone_menu_short">Set as ringtone</string>
    <string name="ringtone_set">\"%s\" set as ringtone</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist %d</string>
    <string name="htc_trackcount_template">" (%d)"</string>
    <string name="emptyplaylist">This playlist is empty</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Unable to play this song</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="mediaplaybacklabel">Listen</string>
    <string name="mediaplaybacklabel_music">Music</string>
    <string name="playback_failed">Unable to play this type of audio file</string>
    <string name="htc_save">Save</string>
    <string name="htc_add">Add</string>
    <string name="htc_remove">Remove</string>
    <string name="mediasearch">Search for %s using:</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="search_settings_description">Artists, albums, tracks</string>
    <string name="htc_album_picker_title">Select album</string>
    <string name="htc_artist_picker_title">Select artist</string>
    <string name="htc_playlist_picker_title">Select playlist</string>
    <string name="htc_genre_picker_title">Select genre</string>
    <string name="htc_composer_picker_title">Select composer</string>
    <string name="htc_create_playlist_title">Create playlist</string>
    <string name="htc_repeat">Repeat</string>
    <string name="htc_repeatone">Repeat one</string>
    <string name="htc_repeatall">Repeat all</string>
    <string name="htc_togglesuffle">Shuffle on/off</string>
    <string name="htc_audio_booster">Sound enhancer</string>
    <string name="htc_property_title">Properties</string>
    <string name="htc_property_length">Length</string>
    <string name="htc_property_filename">File name</string>
    <string name="htc_property_track">Title</string>
    <string name="htc_property_artist">Artist</string>
    <string name="htc_property_album">Album</string>
    <string name="htc_property_genre">Genre</string>
    <string name="htc_property_composer">Composer</string>
    <string name="htc_property_disc_number">Disc number</string>
    <string name="htc_property_track_number">Track number</string>
    <string name="htc_property_track_year">Year</string>
    <string name="htc_property_location">Location</string>
    <string name="htc_property_unknown">Unknown</string>
    <string name="htc_drm_status">Protection information</string>
    <string name="htc_drm_access_count">Play count:</string>
    <string name="htc_drm_start_date">Start date:</string>
    <string name="htc_drm_end_date">End date:</string>
    <string name="htc_drm_fl">Forward lock</string>
    <string name="htc_drm_cd">Combined delivery</string>
    <string name="htc_drm_sd">Separate delivery</string>
    <string name="htc_drm_information">Information</string>
    <string name="htc_drm_no_rights_object">This file requires a license for playback.</string>
    <string name="card_firstname_oncard">First name on card</string>
    <string name="card_lastname_oncard">Last name on card</string>
    <string name="card_detail_number">Card number (Visa/Mastercard)</string>
    <string name="card_detail_expire">Expiration date</string>
    <string name="card_address_address1">Address</string>
    <string name="card_address_city">City</string>
    <string name="card_address_state">State/Province/Region</string>
    <string name="card_address_country">Country</string>
    <string name="card_address_zip">ZIP</string>
    <string name="card_county_hint">State/Province/Region</string>
    <string name="card_number_hint">Card number</string>
    <string name="auth_create_text">"Don't have a Listen account?"</string>
    <string name="auth_login_text">Already have a Listen account?</string>
    <string name="auth_button_register">Create</string>
    <string name="auth_button_login">Sign in</string>
    <string name="login_activity_username_label">Email address</string>
    <string name="login_activity_old_password_label">Old passowrd</string>
    <string name="login_activity_new_password_label">New passowrd</string>
    <string name="login_activity_password_label">Password (at least 6 chars.)</string>
    <string name="login_activity_confirm_password_label">Verify password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="auth_read_termsandconditions">I have read and accepted the</string>
    <string name="auth_termsofuse"><u>Terms of Service.</u></string>
    <string name="auth_send_promo">Yes, send me offers, news and updates.</string>
    <string name="auth_view_termsandconditions"><u>View Terms of Service</u></string>
    <string name="auth_showpassword">Show password</string>
    <string name="auth_forgotpassword">Forgot password</string>
    <string name="help_title">Help</string>
    <string name="add_card_info_header">Add a card</string>
    <string name="card_holder_address_header">Registered billing address</string>
    <string name="online_setting_account_detail_title">Account details</string>
    <string name="online_setting_downloading_title">View download queue</string>
    <string name="online_setting_payment_method_title">Payment methods</string>
    <string name="online_setting_storage_title">Storage</string>
    <string name="options_menu_my_purchases">My purchases</string>
</resources>