<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@com.htc:drawable/common_app_bkg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/browser_header_short_layout" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <FrameLayout android:id="@id/content" android:background="@color/listview_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout style="@style/auth.container">
                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_activity_username_label" style="@style/auth.textview_account_info" />
                        <EditText android:textSize="@com.htc:dimen/input_default_m" android:id="@id/login_user_id" android:hint="@string/login_activity_username_label" android:inputType="textEmailAddress" style="@style/edittext" />
                    </LinearLayout>
                    <View style="@style/divider" />
                    <LinearLayout style="@style/auth.container">
                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_activity_old_password_label" style="@style/auth.textview_account_info" />
                        <EditText android:textSize="@com.htc:dimen/input_default_m" android:id="@id/old_password" android:hint="@string/login_activity_old_password_label" android:inputType="textPassword" style="@style/edittext" />
                    </LinearLayout>
                    <View style="@style/divider" />
                    <LinearLayout style="@style/auth.container">
                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_activity_password_label" style="@style/auth.textview_account_info" />
                        <EditText android:textSize="@com.htc:dimen/input_default_m" android:id="@id/new_password" android:hint="@string/login_activity_new_password_label" android:inputType="textPassword" style="@style/edittext" />
                    </LinearLayout>
                    <View style="@style/divider" />
                    <LinearLayout style="@style/auth.container">
                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_activity_confirm_password_label" style="@style/auth.textview_account_info" />
                        <EditText android:textSize="@com.htc:dimen/input_default_m" android:id="@id/login_confirm_password" android:hint="@string/login_activity_confirm_password_label" android:inputType="textPassword" style="@style/edittext" />
                    </LinearLayout>
                    <View style="@style/divider" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/first_name" style="@style/auth.textview_account_info" />
                    <EditText android:textSize="@com.htc:dimen/input_default_m" android:id="@id/login_first_name" android:hint="@string/first_name" android:inputType="textCapWords" style="@style/edittext" />
                    <View style="@style/divider" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/last_name" style="@style/auth.textview_account_info" />
                    <EditText android:textSize="@com.htc:dimen/input_default_m" android:id="@id/login_last_name" android:hint="@string/last_name" android:inputType="textCapWords" style="@style/edittext" />
                    <View style="@style/divider" />
                    <CheckBox android:textColor="#ff000000" android:id="@id/auth_send_promo" android:layout_width="fill_parent" android:layout_height="@com.htc:dimen/htc_list_item_height" android:layout_marginLeft="@dimen/border_margin" android:layout_marginRight="@dimen/border_margin" android:text="@string/auth_send_promo" android:layout_weight="1.0" style="@com.htc:style/list_primary_s" />
                    <View style="@style/divider" />
                    <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/save_button_holder" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@com.htc:dimen/htc_list_item_height" android:layout_marginLeft="@dimen/border_margin" android:layout_marginRight="@dimen/border_margin">
                            <Button android:textColor="@color/dark_blue" android:layout_gravity="center" android:id="@id/term_button" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auth_view_termsandconditions" android:layout_weight="1.0" style="@com.htc:style/list_primary_s" />
                        </LinearLayout>
                        <View style="@style/divider" />
                    </LinearLayout>
                    <ImageView android:id="@id/buttonSpacer" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="@com.htc:dimen/htc_list_item_height" android:layout_below="@id/editing_window_content" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </RelativeLayout>
    <include layout="@layout/payment_footer_layout" />
</LinearLayout>
